UPDATE: Ajustes de menu de categorias

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Portafolio de Proyectos | Ing. Edson R. Rubio López" />
-    <meta property="og:url" content="https://edsonrubio.tech/" />
-    <meta property="og:image" content="https://edsonrubio.tech/images/og-image.jpg" />
-    <meta name="copyright" content="Portafolio de Proyectos | Ing. Edson R. Rubio López">
+    <meta property="og:title" content="Menú - Angeles Sushi Teriyaki" />
+    <meta property="og:url" content="https://mimenu-web.com/" />
+    <meta property="og:image" content="https://mimenu-web.com/angelesSushi/images/og-image.png" />
+    <meta name="copyright" content="Menú - Angeles Sushi Teriyaki">
     <meta name="audience" content="all">
     <meta name="robots" content="index, all, follow">
     <meta name="category"
-        content="Proyectos, HTML, CSS, SCSS, Javascript, MySQL, Full-Stack, PHP, Visión Artificial, TensorFlow, Machine Learning">
+        content="Restaurante de Sushi en Boca del Rio Veracruz">
     <meta name="author" content="Ing. Edson R. Rubio">
     <meta itemprop="telephone" content="5588093678">
 
@@ -52,5 +52,7 @@
     -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
